[package]
name = "river-rs"
description = "Utilities for configuring River Window Manager."
version = "0.1.5"
authors = ["Saveliy Boyarchuk"]
repository = "https://github.com/Yappaholic/river-rs"
license = "MIT"
edition = "2021"
readme = "README.md"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
